# opentill

./: BUILDING.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
backend/: database.py  main.py  main_entry.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/catalog/: models.py  router.py
backend/catalog/application/: dtos.py  use_cases.py
backend/catalog/domain/: events.py  exceptions.py  product.py  repository.py
backend/catalog/infrastructure/: repository.py  sqlmodel_models.py
backend/catalog/interfaces/: router.py
backend/config/: router.py
backend/configuration/application/: use_cases.py
backend/configuration/domain/: shop_config.py  value_objects.py
backend/configuration/infrastructure/: json_repository.py
backend/orders/: models.py  router.py
backend/payments/: base.py  registry.py  router.py
backend/tests/: conftest.py
docker/: Dockerfile.backend
scripts/: build-backend.js
src/: App.jsx  App.module.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: catalog.js  client.js  config.js  metrics.js  orders.js  payments.js
src/i18n/: index.js
src/pages/: CatalogPage.jsx  Metrics.module.css  MetricsPage.jsx  OrdersPage.jsx  POSPage.jsx  Pages.module.css  SettingsPage.jsx  Table.module.css
src/store/: cartStore.js  configStore.js
src/styles/: global.css
(+74 files in other folders)
