[package]
name = "opentill"
version = "0.1.0"
edition = "2021"

[lib]
name = "opentill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["default"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
